discussion/kv_engine/169745/169745_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50600: Use KVStoreRevision in prepareToDelete et. al.

Magma and couchstore vBuckets deal with revisioning slightly differently
if an item has not yet been written to a vBucket. Nexus needs to be able
to deal with that when we delete a vBucket revision as currently it tries
to delete the revision of the primary KVStore on the secondary. This may
fail if the KVStores revisions are not the same. Add a KVStoreRevision
class which wraps the uint64_t revision value to allow NexusKVStore to
use polymorphism to return a child type containing both revisions in a
future change.

Change-Id: I6ffe388da3744d8a439f3e989602ce08cb7ae17b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-01-31 15:56:23.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-31 16:19:21.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15227/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_vb.cc:41:12: error: constructor for "EPVBucket" must explicitly initialize the member "deferredDeletionFileRevision" which does not have a default constructor [clang-diagnostic-error]
EPVBucket::EPVBucket(Vbid i,
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_vb.h:392:21: note: member is declared here
    KVStoreRevision deferredDeletionFileRevision;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:82:7: note: "KVStoreRevision" declared here
class KVStoreRevision {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:5: error: unknown type name "KVStoreRevision" [clang-diagnostic-error]
    KVStoreRevision vbDeleteRevision;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15227/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_vb.cc:41:12:
error: constructor for "EPVBucket" must explicitly initialize the member "deferredDeletionFileRevision" which does not have a default constructor [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15227/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43454/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_vb.cc(95): error C2512: "KVStoreRevision": no appropriate default constructor available ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43454/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36679/ : FAILURE

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36679/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_vb.cc:41:12:
error: constructor for "EPVBucket" must explicitly initialize the member "deferredDeletionFileRevision" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36679/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17253/ : FAILURE

Compile error at [2022-01-31T16:09:47.530Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:5:
error: ?KVStoreRevision? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17253/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25352/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16049/ : FAILURE

Compile error at [2022-01-31T16:11:49.980Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2@4/kv_engine/engines/ep/src/ep_vb.cc:41:12:
error: constructor for "EPVBucket" must explicitly initialize the member "deferredDeletionFileRevision" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16049/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4880/ : FAILURE

Compile error at [2022-01-31T16:14:24.314Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_vb.cc:41:12:
error: constructor for "EPVBucket" must explicitly initialize the member "deferredDeletionFileRevision" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4880/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4940/ : FAILURE

Compile error at [2022-01-31T16:11:35.997Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@4/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:5:
error: ?KVStoreRevision? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4940/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16935/ : FAILURE

Compile error at [2022-01-31T16:16:28.699Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:5:
error: ?KVStoreRevision? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16935/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18003/ : FAILURE

Compile error at [2022-01-31T16:17:10.940Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_vb.cc:41:12:
error: constructor for "EPVBucket" must explicitly initialize the member "deferredDeletionFileRevision" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18003/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14071/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
